# silent_sentry

./: README.md  requirements.txt
docker/: Dockerfile  docker-compose.yml
paper_data/: main.tex
scripts/: fix_all_vegetation.py  generate_shadow_overlay.py  generate_vegetation.py  generate_vegetation_v2.py
src/bot_controller/: CMakeLists.txt  package.xml
src/bot_controller/config/: bot_controller.yaml
src/bot_controller/launch/: bot_controller.launch.py  bot_controller.launch.xml
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/config/: display.rviz  gazebo_bridge.yaml  gz.rviz
src/bot_description/launch/: display.launch.xml  gazebo.launch.xml  thar_desert.launch.xml
src/bot_description/meshes/: 3dCamera.DAE
src/bot_description/models/Oak_tree/: model.config
src/bot_description/models/Pine_Tree/: model.config  model.sdf
src/bot_description/models/bush/: Untitled.mtl  Untitled.obj.yup_backup  model.config  model.sdf
src/bot_description/models/desert_scrub_bush/: model.config  model.sdf
src/bot_description/models/hill_top_tree/: Untitled.mtl  Untitled.obj.yup_backup  model.config  model.sdf
src/bot_description/models/low_poly_bush_buxus/: Untitled.mtl  Untitled.obj.yup_backup  model.config  model.sdf
src/bot_description/models/low_poly_shrub/: Untitled.mtl  Untitled.obj.yup_backup  model.config  model.sdf
src/bot_description/models/low_poly_shrub_-_small_texture/: Untitled.mtl  (+3 more)
src/bot_description/scripts/: trim_vegetation.py
src/bot_description/urdf/: bot.urdf.xacro  bot_ros2_control.xacro
src/bot_description/worlds/: thar_desert.sdf
src/bot_navigation/: package.xml  setup.cfg  setup.py
src/bot_navigation/behavior_trees/: ackermann_through_bt.xml  ackermann_to_bt.xml
src/bot_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/bot_navigation/launch/: navigation.launch.py  slam.launch.py
src/bot_navigation/maps/: my_map.pgm  my_map.yaml  my_map1.pgm
src/custom_ackermann_controller/: ENHANCED_ODOMETRY_README.md  button_ps4_controller.py  package.xml  setup.cfg  setup.py  test_ps4_controller.py
src/custom_ackermann_controller/config/: adaptive_scan_matcher.yaml  enhanced_ekf.yaml  enhanced_imu_processor.yaml  enhanced_wheel_odometry.yaml  robot_localization.yaml
src/custom_ackermann_controller/custom_ackermann_controller/: ackermann_twist_controller.py  adaptive_scan_matcher.py  enhanced_imu_processor.py  enhanced_wheel_odometry.py  laser_scan_matcher.py  wheel_odometry.py
src/custom_ackermann_controller/launch/: enhanced_localization.launch.py  enhanced_odometry.launch.py  joystick_teleop.launch.py
src/emcon_controller/: package.xml  setup.py
src/emcon_controller/emcon_controller/: emcon_node.py
src/sblp_planner/: package.xml  setup.py
src/sblp_planner/sblp_planner/: sblp_node.py
src/vlm_costmap/: package.xml  setup.py
src/vlm_costmap/vlm_costmap/: vlm_costmap_node.py
(+23 files in other folders)
