<?xml version="1.0"?>
<package format="3">
  <name>emcon_controller</name>
  <version>0.1.0</version>
  <description>
    EMCON (Emission Control) aware command arbitration for autonomous UGVs.
    Suppresses unnecessary RF/sensor emissions during adversarial exposure windows
    and arbitrates between autonomous and tele-operation command streams.
  </description>
  <maintainer email="aditya@example.com">Aditya Pachauri</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
