<?xml version="1.0"?>
<package format="3">
  <name>sblp_planner</name>
  <version>0.1.0</version>
  <description>
    Scenario-Based Local Planner (SBLP). Switches trajectory primitives
    (dune-crossing, rock-avoidance, open-corridor sprint) based on terrain
    class inferred from the VLM costmap layer.
  </description>
  <maintainer email="aditya@example.com">Aditya Pachauri</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
