<?xml version="1.0"?>
<package format="3">
  <name>vlm_costmap</name>
  <version>0.1.0</version>
  <description>
    Vision-Language Model (VLM) traversability costmap layer.
    Uses zero-shot scene understanding (no fine-tuning) to annotate
    camera frames with traversability scores published as a nav2 costmap layer.
  </description>
  <maintainer email="aditya@example.com">Aditya Pachauri</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
